--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,64 @@
+* {
+    color: #000000;
+}
+
 body {
     margin: 0;
     box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+}
+
+h1, h2 {
+    margin: 0;
+}
+
+.main-container {
+    padding: 2%;
+    background-color: antiquewhite;
+}
+
+.section-container {
+    padding: 2%;
+    background-color: rgb(3, 0, 38);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+
+.auth-container {
+    background-color: #ffffff;
+    padding: 3%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 20px 20px;
+}
+
+.auth-options {
+    /* background-color: #757575; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+.auth-options2 {
+    /* background-color: #fff; */
+    padding: 1%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.auth-options2 > button {
+    text-align: center;
+    margin: 2%;
+}
+
+.other-auth-option {
+    text-align: center;
 }
