--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ header {
     border: 10px solid var(--primary-color);
     border-radius: 25px 25px;
     box-shadow: 0px 0px 15px var(--primary-color);
+    margin-bottom: 5%;
 }
 
 .search-container > h2 {
@@ -88,6 +89,20 @@ header {
     width: 75%;
     color: #000000;
     border: 3px solid black;
+}
+
+.search-guide-container {
+    border-radius: 25px 25px;
+    padding: 4%;
+    background-color: #2CEE9C;
+    border: 10px solid #26C884;
+    box-shadow: 0px 0px 15px #2CEE9C;
+    width: 57%;
+}
+
+.search-guide-container > h2 {
+    text-align: center;
+    font-size: 190%
 }
 
 .search-error {
