--- a/styles.css
+++ b/styles.css
@@ -98,11 +98,22 @@ header {
     border: 10px solid #26C884;
     box-shadow: 0px 0px 15px #2CEE9C;
     width: 57%;
+    margin-bottom: 5%;
 }
 
 .search-guide-container > h2 {
     text-align: center;
     font-size: 190%
+}
+
+#players-leaderboard {
+    padding: 4%;
+    width: 70%;
+    border: 10px solid #4b6875;
+    border-radius: 25px 25px;
+    background-color: #5c7e8e;
+    box-shadow: 0px 0px 15px #5c7e8e;
+    min-height: 40vh;
 }
 
 .search-error {
