--- a/styles.css
+++ b/styles.css
@@ -374,3 +374,618 @@ h1, h2 {
 #valorantlogo-img > img {
     width: 100%;
 }
+
+@media (min-width: 1000px) {
+
+    .main-container {
+        width: 60%;
+    }
+
+    .header-text-container {
+        font-size: 3vw;
+        margin-bottom: 4%;
+        margin-top: 0;
+    }
+
+    .search-container {
+        padding-top: 3%;
+        padding-bottom: 4%;
+        width: 65%;
+        border: 1vw solid var(--primary-color);
+        border-radius: 25px 25px;
+        margin-bottom: 3%;
+    }
+
+    .search-error {
+        color: var(--error-color);;
+        font-size: 2.5vw;
+        margin-bottom: 6%;
+    }
+
+    .search-container > h2 {
+        font-size: 4vw;
+        text-shadow: 0px 2px 4px rgb(151, 151, 151);
+        margin-bottom: 1%;
+    }
+    
+    .search-container > input {
+        border-radius: 1.5vw 1.5vw;
+        margin-bottom: 3%;
+        padding: 2%;
+        text-align: center;
+        width: 75%;
+        color: var(--black-color);;
+        border: 0.45vw solid var(--black-color);
+        font-size: 1.5vw;
+    }
+
+    .submit-button {
+        border-radius: 5px 5px;
+        padding: 1%;
+        width: 80%;
+        font-size: 1.5vw;
+        border: 0.3vw solid var(--subprimary-color);;
+    }
+
+    .header-container {
+        padding-left: 1.5%;
+        padding-right: 3.5%;
+        padding-top: 1%;
+        padding-bottom: 1%;
+    }
+
+    .search-guide-container {
+        border-radius: 25px 25px;
+        padding: 2%;
+        border: 1vw solid var(--subsecondary-color);;
+        width: 60%;
+        margin-bottom: 3%;
+    }
+    
+    .match-history-container {
+        background-color: #2f2e32;
+        padding: 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .header-text {
+        font-size: 2vw;
+    }
+    
+    .content-text {
+        font-size: 1.4vw;
+    }
+    
+    .map {
+        width: 50%;
+        padding: 2%;
+    }
+    
+    .map-info {
+        padding: 2%;
+        font-size: 2.2vw;
+    }
+
+    .match-history-title-container > h2 {
+        text-align: center;
+        font-size: 4.7vw;
+        padding: 1.25%;
+    }
+
+    .match > h2 {
+        font-size: 3vw;
+    }
+    
+    .player-card > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-right: 0%;
+        padding-left: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .search-guide-container > h2 {
+        text-align: center;
+        font-size: 4vw;
+    }
+    
+    .search-guide-container > ol {
+        font-size: 2vw;
+    }
+
+    .basicuserdata-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1vw solid var(--subtertiary-color);;
+        border-radius: 25px 25px;
+        width: 65%;
+        margin-bottom: 5%;
+    }
+    
+    .basicinfo {
+        padding: 3%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .basicuserdata-container > h2 {
+        font-size: 3vw;
+        padding: 2%;
+        padding-top: 4%;
+    }
+    
+    .basicinfo > p {
+        font-size: 1.5vw;
+    }
+
+    .playerimg {
+        padding: 4%;
+        width: 30%;
+    }
+
+    #players-leaderboard {
+        padding: 2%;
+        width: 60%;
+        border: 1vw solid #4b6875;
+        border-radius: 25px 25px;
+        height: 40vw;
+    }
+
+    .error-search-container {
+        padding: 1.5%;
+        width: 62%;
+        border: 1vw solid var(--error-color);
+        border-radius: 25px 25px;
+        box-shadow: 0px 0px 5px var(--error-color);
+    }
+
+    .error-search-container > img {
+        width: 20%;
+    }
+
+    .error-search-container > h2 {
+        color: var(--black-color);;
+        font-size: 3vw;
+        font-weight: bolder;
+        text-align: center;
+    }
+
+    #valorantlogo-img {
+        width: 4%;
+    }
+
+    #twitterlogo-img, #facebooklogo-img, #instagramlogo-img {
+        width: 18%;
+        border-radius: 2px 2px;
+        margin-left: 5%;
+    }
+
+    .socials-container {
+        width: 15%;
+        padding-top: 1.8%;
+        padding-bottom: 1.8%;
+        padding-right: 2%;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 600px) and (max-width: 1000px) {
+
+    .main-container {
+        width: 70%;
+    }
+
+    .header-text-container {
+        font-size: 3.8vw;
+        margin-bottom: 5%;
+        margin-top: 0;
+    }
+
+    .search-container {
+        padding-top: 3%;
+        padding-bottom: 4%;
+        width: 65%;
+        border: 1vw solid var(--primary-color);
+        border-radius: 25px 25px;
+        margin-bottom: 5%;
+    }
+
+    .search-error {
+        color: var(--error-color);;
+        font-size: 2.5vw;
+        margin-bottom: 6%;
+    }
+
+    .search-container > h2 {
+        font-size: 7vw;
+        text-shadow: 0px 2px 4px rgb(151, 151, 151);
+        margin-bottom: 3%;
+    }
+    
+    .search-container > input {
+        border-radius: 1.5vw 1.5vw;
+        margin-bottom: 4%;
+        padding: 2.5%;
+        text-align: center;
+        width: 75%;
+        color: var(--black-color);;
+        border: 0.45vw solid var(--black-color);
+        font-size: 2.5vw;
+    }
+
+    .submit-button {
+        border-radius: 5px 5px;
+        padding: 1%;
+        width: 80%;
+        font-size: 2.5vw;
+        border: 0.5vw solid var(--subprimary-color);;
+    }
+
+    .header-container {
+        padding-left: 2.4%;
+        padding-right: 3.5%;
+        padding-top: 1.2%;
+        padding-bottom: 1.2%;
+    }
+
+    .search-guide-container {
+        border-radius: 25px 25px;
+        padding: 4%;
+        border: 1vw solid var(--subsecondary-color);;
+        width: 58%;
+        margin-bottom: 3%;
+    }
+    
+    .match-history-container {
+        background-color: #2f2e32;
+        padding: 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .header-text {
+        font-size: 2vw;
+    }
+    
+    .content-text {
+        font-size: 1.4vw;
+    }
+    
+    .map {
+        width: 50%;
+        padding: 2%;
+    }
+    
+    .map-info {
+        padding: 2%;
+        font-size: 2.2vw;
+    }
+
+    .match-history-title-container > h2 {
+        text-align: center;
+        font-size: 4.7vw;
+        padding: 1.25%;
+    }
+
+    .match > h2 {
+        font-size: 3vw;
+    }
+    
+    .player-card > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-right: 0%;
+        padding-left: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .search-guide-container > h2 {
+        text-align: center;
+        font-size: 5vw;
+    }
+    
+    .search-guide-container > ol {
+        font-size: 3vw;
+    }
+
+    .basicuserdata-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1vw solid var(--subtertiary-color);;
+        border-radius: 25px 25px;
+        width: 65%;
+        margin-bottom: 5%;
+    }
+    
+    .basicinfo {
+        padding: 3%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .basicuserdata-container > h2 {
+        font-size: 3.4vw;
+        padding: 4%;
+        padding-top: 4%;
+    }
+    
+    .basicinfo > p {
+        font-size: 2vw;
+    }
+
+    .playerimg {
+        padding: 4%;
+        width: 30%;
+    }
+
+    #players-leaderboard {
+        padding: 3%;
+        width: 60%;
+        border: 1vw solid #4b6875;
+        border-radius: 25px 25px;
+        height: 40vw;
+    }
+
+    .error-search-container {
+        padding: 3%;
+        width: 62%;
+        border: 1vw solid var(--error-color);
+        border-radius: 25px 25px;
+        box-shadow: 0px 0px 5px var(--error-color);
+    }
+
+    .error-search-container > img {
+        width: 30%;
+    }
+
+    .error-search-container > h2 {
+        color: var(--black-color);;
+        font-size: 4vw;
+        font-weight: bolder;
+        text-align: center;
+    }
+
+    #valorantlogo-img {
+        width: 6%;
+    }
+
+    #twitterlogo-img, #facebooklogo-img, #instagramlogo-img {
+        width: 25%;
+        border-radius: 2px 2px;
+        margin-left: 5%;
+    }
+
+    .socials-container {
+        width: 15%;
+        padding-top: 1.8%;
+        padding-bottom: 1.8%;
+        padding-right: 2%;
+        justify-content: center;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .main-container {
+        width: 100%;
+    }
+
+    .header-text-container {
+        font-size: 5.5vw;
+        margin-bottom: 5%;
+        margin-top: 0.5;
+    }
+
+    .search-container {
+        padding-top: 9%;
+        padding-bottom: 9%;
+        width: 65%;
+        border: 1.5vw solid var(--primary-color);
+        border-radius: 25px 25px;
+        margin-bottom: 3%;
+    }
+
+    .search-error {
+        color: var(--error-color);;
+        font-size: 6vw;
+        margin-bottom: 8%;
+    }
+
+    .search-container > h2 {
+        font-size: 13vw;
+        text-shadow: 0px 2px 4px rgb(151, 151, 151);
+        margin-bottom: 3%;
+    }
+    
+    .search-container > input {
+        border-radius: 1.5vw 1.5vw;
+        margin-bottom: 6%;
+        padding: 2.5%;
+        text-align: center;
+        width: 75%;
+        color: var(--black-color);;
+        border: 0.9vw solid var(--black-color);
+        font-size: 3.8vw;
+    }
+
+    .submit-button {
+        border-radius: 5px 5px;
+        padding: 1%;
+        width: 80%;
+        font-size: 4.5vw;
+        border: 0.9vw solid var(--subprimary-color);;
+    }
+
+    .header-container {
+        padding-left: 3%;
+        padding-right: 3.5%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .search-guide-container {
+        border-radius: 25px 25px;
+        padding: 4%;
+        border: 1vw solid var(--subsecondary-color);;
+        width: 58%;
+        margin-bottom: 3%;
+    }
+    
+    .match-history-container {
+        background-color: #2f2e32;
+        padding: 2%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .header-text {
+        font-size: 3.5vw;
+    }
+    
+    .content-text {
+        font-size: 2.5vw;
+    }
+    
+    .map {
+        width: 50%;
+        padding: 2%;
+    }
+    
+    .map-info {
+        padding: 2%;
+        font-size: 3vw;
+    }
+
+    .match-history-title-container > h2 {
+        text-align: center;
+        font-size: 8vw;
+        padding: 1.25%;
+    }
+
+    .match > h2 {
+        font-size: 5.5vw;
+    }
+    
+    .player-card > div {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-right: 0%;
+        padding-left: 2%;
+        padding-top: 2%;
+        padding-bottom: 2%;
+    }
+
+    .search-guide-container > h2 {
+        text-align: center;
+        font-size: 8vw;
+    }
+    
+    .search-guide-container > ol {
+        font-size: 5.5vw;
+    }
+
+    .basicuserdata-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1vw solid var(--subtertiary-color);;
+        border-radius: 25px 25px;
+        width: 65%;
+        margin-bottom: 5%;
+    }
+    
+    .basicinfo {
+        padding: 3%;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-direction: column;
+        width: 50%;
+    }
+
+    .basicuserdata-container > h2 {
+        font-size: 4.5vw;
+        padding: 4%;
+        padding-top: 6%;
+    }
+    
+    .basicinfo > p {
+        font-size: 3vw;
+    }
+
+    .playerimg {
+        padding: 4%;
+        width: 30%;
+    }
+
+    #players-leaderboard {
+        padding: 5%;
+        width: 56%;
+        border: 1vw solid #4b6875;
+        border-radius: 25px 25px;
+        height: 60vw;
+    }
+
+    .error-search-container {
+        padding: 3%;
+        width: 62%;
+        border: 1vw solid var(--error-color);
+        border-radius: 25px 25px;
+        box-shadow: 0px 0px 5px var(--error-color);
+    }
+
+    .error-search-container > img {
+        width: 30%;
+    }
+
+    .error-search-container > h2 {
+        color: var(--black-color);;
+        font-size: 4vw;
+        font-weight: bolder;
+        text-align: center;
+    }
+
+    #valorantlogo-img {
+        width: 16%;
+    }
+
+    #twitterlogo-img, #facebooklogo-img, #instagramlogo-img {
+        width: 65%;
+        border-radius: 2px 2px;
+        margin-left: 15%;
+    }
+
+    .socials-container {
+        width: 12%;
+        padding-top: 6%;
+        padding-bottom: 6%;
+        padding-right: 15%;
+        justify-content: center;
+    }
+}
